--- a/Home/src/main/res/layout/fragment_home.xml
+++ b/Home/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                     android:layout_marginStart="25sp"
                     android:layout_marginTop="10sp"
                     android:layout_marginEnd="25sp"
-                    android:layout_marginBottom="25sp"
+                    android:layout_marginBottom="15sp"
                     android:background="@drawable/round_back_color4_15"
                     android:textAlignment="center"
                     android:textColor="#7B7B7B"
@@ -53,7 +53,17 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/search"/>
+                    android:layout_below="@id/search">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/categoryRv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/latestLayout"
+                        />
+                </LinearLayout>
+
+
 
 
 
@@ -64,6 +74,7 @@
                     android:id="@+id/latestLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="25sp"
                     android:layout_below="@id/categories">
 
                     <TextView
@@ -92,7 +103,7 @@
                 </RelativeLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
+                    android:id="@+id/latestRv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/latestLayout"
@@ -103,7 +114,7 @@
                     android:id="@+id/salelayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/recyclerView"
+                    android:layout_below="@+id/latestRv"
                     android:orientation="vertical"
                     >
 
