completed latest item view

--- a/Home/src/main/res/layout/action_bar_page1.xml
+++ b/Home/src/main/res/layout/action_bar_page1.xml
@@ -12,8 +12,10 @@
             android:id="@+id/menu_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:background="@drawable/menu_vector"
+            android:background="@android:color/transparent"
+            android:foreground="@drawable/menu_vector"
             android:layout_marginStart="8dp"
+            android:backgroundTint="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
