--- a/Home/src/main/res/layout/activity_home_page1.xml
+++ b/Home/src/main/res/layout/activity_home_page1.xml
@@ -16,7 +16,8 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:labelVisibilityMode="labeled"
+        app:labelVisibilityMode="unlabeled"
+        app:itemBackground="@drawable/bg_bottom_nav_item_selected"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
