--- a/Home/src/main/res/layout/action_bar_page1.xml
+++ b/Home/src/main/res/layout/action_bar_page1.xml
@@ -56,6 +56,17 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/imageUser"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/round_back_sec_str_100"
+            android:clipToOutline="true"/>
+
+        <ImageView
             android:id="@+id/profile_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
