--- a/Home/src/main/res/layout/fragment_profile.xml
+++ b/Home/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,332 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ProfileFragment">
+    >
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="profile" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</FrameLayout>
+
+    <!-- Title: Profile -->
+    <TextView
+        android:id="@+id/title_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/montserrat_regular"
+        android:textStyle="bold"
+        android:layout_marginTop="25dp"
+        android:textColor="@color/black"
+        android:text="Profile"
+        android:textSize="20sp" />
+
+    <!-- User Profile Image -->
+    <ImageView
+        android:id="@+id/imageUser"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round_back_sec_str_100"
+        android:clipToOutline="true"/>
+
+    <!-- Change Photo -->
+    <TextView
+        android:id="@+id/change_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Change Photo"
+        android:layout_margin="4dp"
+        android:textSize="8sp" />
+
+    <!-- First Name and Last Name -->
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/montserrat_regular"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:text="First Last"
+        android:textSize="20sp" />
+
+
+    <!-- Upload Item Button -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/upload_item"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="45sp"
+        android:layout_marginTop="25sp"
+        android:layout_marginEnd="45sp"
+        android:layout_marginBottom="10sp"
+        android:drawablePadding="16dp"
+        android:drawableLeft="@drawable/share"
+        android:textColor="@color/white"
+        android:background="@drawable/round_back_color3_100"
+        android:fontFamily="@font/montserrat_bold"
+        android:textAllCaps="false"
+        android:text="Upload Item" />
+
+    <!-- Trade Store -->
+    <LinearLayout
+        android:id="@+id/trade_store"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/trade_store_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/creditcard_vector" />
+
+        <TextView
+            android:id="@+id/trade_store_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Trade Store"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/trade_store_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+
+            android:src="@drawable/rightarrow_vector" />
+
+    </LinearLayout>
+
+    <!-- Payment Method -->
+    <LinearLayout
+        android:id="@+id/payment_method"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/payment_method_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/creditcard_vector" />
+
+        <TextView
+            android:id="@+id/payment_method_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Payment Method"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/payment_method_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:src="@drawable/rightarrow_vector" />
+
+    </LinearLayout>
+
+    <!-- Balance -->
+    <LinearLayout
+        android:id="@+id/balance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/balance_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/creditcard_vector" />
+
+        <TextView
+            android:id="@+id/balance_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Balance"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/balance_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+
+            android:text="$1593"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <!-- Trade history -->
+    <LinearLayout
+        android:id="@+id/tradehistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/tradehistory_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/creditcard_vector" />
+
+        <TextView
+            android:id="@+id/tradehistory_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Trade history"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/tradehistory_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:src="@drawable/rightarrow_vector" />
+
+    </LinearLayout>
+
+    <!-- Restore purchase -->
+    <LinearLayout
+        android:id="@+id/restorepurchase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/restorepurchase_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/restore_vector" />
+
+        <TextView
+            android:id="@+id/restorepurchase_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Restore purchase"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/restorepurchase_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:src="@drawable/rightarrow_vector" />
+
+    </LinearLayout>
+
+    <!-- Help -->
+    <LinearLayout
+        android:id="@+id/help"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/help_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/questioncircle_vector" />
+
+        <TextView
+            android:id="@+id/help_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Help"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <!-- Logout -->
+    <LinearLayout
+        android:id="@+id/logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="25sp"
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/logout_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logout_vector" />
+
+        <TextView
+            android:id="@+id/logout_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log out"
+            android:layout_margin="4dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+    </LinearLayout>
+    </LinearLayout>
+</ScrollView>
